# RetroAmp

./: .gitignore  LICENSE  README.md  THIRD_PARTY_LICENSES.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts  winamp-player-design.md
.github/workflows/: release.yml
assets/default-skin/: pledit.txt  viscolor.txt
docs/: RELEASING.md  SPOTIFY_SETUP.md
memory/: MEMORY.md  feedback_check_references.md  reference_projects.md
scripts/: generate_default_skin.py  rebuild_skin_seeds.sh
skins/: (Classic) Dcb v3Dark.wsz  (Classic) Dcb.wsz  (Classic) MMVII.wsz  (Classic) fCrcl.wsz  -_Solar_Flare_-.wsz  42.wsz  52amp_v2.wsz  8-bit_Theater_v2.wsz  ABOMINATION.wsz  ABUSE.wsz  AKA_Angelina_Jolie.wsz  AKA_Charisma_Carpenter.wsz  AKI_Charisma_Carpenter.wsz  AV_Theme_(Dk_Green).wsz  Academy_of_Sciences_Fishes_v1.3.wsz  Ace_Attorney_Investigations.wsz  AcidRain_v5.wsz  Aeon_default.wsz  Affinity-Dark.wsz  Ali_Larter_blue_heaven.wsz  Alien_Assault_v1.wsz  Amber.wsz  AmeriCorps.wsz  AmiAMP.wsz  Analog_LCD_B.wsz  Analog_LCD_G.wsz  Ancolie9c_v5.wsz  AngelAmped.wsz  Angelina_Jolie_Tres_Jolie.wsz  Angelina_Jolie_Tres_Jolie_3D.wsz  Angels_and_Dragons.wsz  Anomaly_AMP.wsz  Archon_Uranther_Promo.wsz  ArctecFXx2.wsz  Army-Amped.wsz  Auriga_Classic_v5.wsz  Autobots2005.wsz  Avril_Lavigne_Kicks_Ass.wsz  Axlar.wsz  Ayumi-san.wsz  (+221 more)
src/: App.tsx  features.ts  nativeMenu.ts  updater.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  tray-icon.rgba
src-tauri/src/: commands.rs  config.rs  context_menu.rs  db.rs  default_stations.json  lib.rs  main.rs  media_controls.rs  radio_browser.rs  tray.rs
src-tauri/src/audio/: adts.rs  buffer.rs  engine.rs  eq.rs  error.rs  fft.rs  icy.rs  local.rs  mod.rs  opus.rs  output.rs  playlist_parser.rs  radio.rs  recorder.rs  resample.rs  source.rs  spotify.rs  stream_reader.rs  youtube.rs
src-tauri/src/playlist/: manager.rs  mod.rs  queue.rs  sequence.rs  track.rs
src-tauri/src/skin/: default.rs  loader.rs  mod.rs  scanner.rs  seed.rs  thumbnail.rs
src-tauri/src/spotify/: api.rs  auth.rs  commands.rs  mod.rs  types.rs
src-tauri/src/window/: manager.rs  mod.rs
src-tauri/src/youtube/: api.rs  commands.rs  mod.rs  save.rs  types.rs  ytdlp.rs
src/settings/: SettingsWindow.tsx  SkinBrowser.tsx  settings.css
src/skin/: ContextMenu.tsx  EqualizerWindow.tsx  LibraryBrowserWindow.tsx  MainWindow.tsx  PlaylistWindow.tsx  RadioBrowserWindow.tsx  SpotifyBrowserWindow.tsx  YouTubeBrowserWindow.tsx  charmap.ts  parser.ts  sprites.ts
src/tageditor/: TagEditorWindow.tsx  tageditor.css
src/types/: butterchurn.d.ts
src/visualizer/: AudioAdapter.ts  VisualizerWindow.tsx
