[package]
name = "retroamp"
version = "0.1.1"
edition = "2024"
description = "Cross-platform desktop audio player inspired by Winamp 2.x"
license = "MIT"

[lib]
name = "retroamp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "retroamp"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Desktop shell
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio decoding — multi-format support
# Features enable the specific codecs we need
symphonia = { version = "0.5", features = [
    "mp3",
    "flac",
    "aac",
    "isomp4",
    "ogg",
    "vorbis",
    "wav",
    "pcm",
    "alac",
    "mkv",
] }

# Cross-platform audio output
cpal = "0.15"

# FFT for spectrum analysis / visualisation data
rustfft = "6"

# Error handling
thiserror = "2"

# Logging
log = "0.4"
env_logger = "0.11"
tauri-plugin-dialog = "2.6.0"
rubato = "1.0.1"
audioadapter-buffers = "2.0.0"
ringbuf = "0.4"
rand = "0.10.0"
zip = { version = "8.4.0", default-features = false, features = ["deflate"] }
base64 = "0.22.1"
dirs = "6.0.0"
toml = "0.8"
rusqlite = { version = "0.33", features = ["bundled"] }
ureq = "3"
lofty = "0.22"
sha1 = "0.10"
sha2 = "0.10"
percent-encoding = "2"
souvlaki = { version = "0.8", default-features = false, features = ["use_zbus"] }
librespot = { git = "https://github.com/librespot-org/librespot", default-features = false, features = ["native-tls"], optional = true }
tokio = { version = "1", features = ["rt"] }
rusty_ytdl = { version = "0.7", default-features = false }
ytmapi-rs = { version = "0.3", features = ["reqwest"] }
reqwest = { version = "0.13", default-features = false, features = ["cookies"] }
chrono = { version = "0.4", default-features = false, features = ["now"] }
audiopus = "0.2"
# Needed for Windows: lib.rs queries the main window's HWND via the
# HasWindowHandle trait to hand it to souvlaki. Tauri uses raw-window-handle
# internally, but transitive deps aren't importable — declare it directly.
raw-window-handle = "0.6"

# HE-AAC (SBR + Parametric Stereo) decoder. Symphonia's AAC decoder only
# implements AAC-LC, so HE-AACv1/v2 streams (e.g. Radio Paradise) decode
# with a silent right channel. fdk-aac vendors libfdk-aac as C++ source
# and builds it via the `cc` crate, so no system library is required.
fdk-aac = "0.8"

# Auto-updates. `updater` fetches signed releases from the configured
# endpoint; `process` provides relaunch() so the new binary takes over
# after install. Desktop-only — gated by `cfg(desktop)` at the call site.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]
# Spotify integration. Disabled by default — Spotify's Web API now requires
# users to register their own Developer App (Dev Mode), which is too rough an
# onboarding step for a casual player. YouTube Music covers the same ground
# without that friction. Build with `--features spotify` to re-enable; the
# code path is preserved for that purpose.
spotify = ["dep:librespot"]
